[package]
name = "udp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = { version = "1.3.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
tokio = { version = "1", features = ["full"]  }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu"
ar = "x86_64-unknown-linux-gnu-ar"

